--- a/templetes/views/about.hbs
+++ b/templetes/views/about.hbs
@@ -10,6 +10,7 @@
         <div class="main-content">
             {{>header}}
             <img class="portrait" src="./img/Copy of DSC_2756.JPG">
+            <p>This site was created by Khaled Waleed. It uses mapbox.com and weatherapi.net!</p>
         </div>
         
         {{>footer}}
