Ghange about photo

--- a/templetes/views/about.hbs
+++ b/templetes/views/about.hbs
@@ -9,7 +9,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-            <img class="portrait" src="./img/Copy of DSC_2756.JPG">
+            <img class="portrait" src="./img/ed.jpg">
             <p>This site was created by Khaled Waleed. It uses mapbox.com and weatherapi.net!</p>
         </div>
         
